# nrf52840-embassy

./: Cargo.toml  README.md  build.rs  memory.x  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: rust.yml
src/: bmp280.rs  board_config.rs  display.rs  main.rs  message_hub.rs  neopixel.rs  sensors.rs  sht30.rs  softdevice.rs  ui.rs
src/driver/: bmp280.rs  log_storage.rs  mod.rs  neopixel.rs  sht30.rs
ui/: main.slint
