[package]
name = "nrf52840-embassy"
version = "0.1.0"
edition = "2021"

[patch.crates-io]
embassy-executor = {  git = "https://github.com/pbert519/embassy" , branch = "nrf-pdm-support" }
embassy-sync = {  git = "https://github.com/pbert519/embassy" , branch = "nrf-pdm-support" }
embassy-nrf = { git = "https://github.com/pbert519/embassy" , branch = "nrf-pdm-support" }
embassy-time = { git = "https://github.com/pbert519/embassy" , branch = "nrf-pdm-support" }
embassy-embedded-hal = {  git = "https://github.com/pbert519/embassy" , branch = "nrf-pdm-support" }

nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice" , branch = "master" }
nrf-softdevice-s140 = { git = "https://github.com/embassy-rs/nrf-softdevice" , branch = "master" }

[dependencies]
embassy-executor = { version = "0.1.0", features = ["defmt", "nightly", "integrated-timers"] }
embassy-sync = { version = "0.1.0", features = ["defmt"] }
embassy-nrf = { version = "0.1.0", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-traits", "nightly"] }
embassy-time = { version = "0.1.0", features = ["defmt"] }
embassy-embedded-hal = "0.1.0" 
embedded-hal-async = "0.1.0-alpha.1"

nrf-softdevice = { version = "0.1.0", features = ["ble-gatt-server", "defmt", "nrf52840", "s140", "ble-peripheral", "ble-central", "critical-section-impl"] }
nrf-softdevice-s140 = { version = "0.1.1" }

static_cell = "1.0"
defmt = "0.3"
defmt-rtt = "0.3"
cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

microfft = "0.5.0"
ssd1306 = "0.7.1"
embedded-graphics = "0.7.1"
embedded-storage = "0.3.0"
bincode = { version = "2.0.0-rc.2", default-features = false, features = ["derive"]}

[profile.release]
# symbols are nice and they don't increase the size on Flash
debug = true

[profile.dev.package."*"] 
opt-level = 2 