[package]
name = "nrf52840-embassy"
version = "0.1.0"
edition = "2021"

[patch.crates-io]
embassy-executor = {  git = "https://github.com/embassy-rs/embassy" , branch = "main" }
embassy-sync = {  git = "https://github.com/embassy-rs/embassy" , branch = "main" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy" , branch = "main" }
embassy-time = { git = "https://github.com/embassy-rs/embassy" , branch = "main" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy" , branch = "main" }
embassy-futures = {  git = "https://github.com/embassy-rs/embassy" , branch = "main" }

nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice" , branch = "master" }
nrf-softdevice-s140 = { git = "https://github.com/embassy-rs/nrf-softdevice" , branch = "master" }

[dependencies]
embassy-executor = { version = "^0.3", features = ["arch-cortex-m", "executor-thread", "defmt", "nightly", "integrated-timers"] }
embassy-sync = { version = "^0.2", features = ["defmt"] }
embassy-nrf = { version = "^0.1.0", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-traits", "nightly"] }
embassy-time = { version = "^0.1", features = ["defmt"] }
embassy-futures = { version = "^0.1", features = ["defmt"] }
embassy-embedded-hal = { version = "0.1.0", features = ["nightly"]} 
embedded-hal-async = "1.0.0-rc.1"

nrf-softdevice = { version = "0.1.0", features = ["ble-gatt-server", "defmt", "nrf52840", "s140", "ble-peripheral", "critical-section-impl"] }
nrf-softdevice-s140 = { version = "0.1.1" }

static_cell = "^1.2"
defmt = "^0.3"
defmt-rtt = "^0.4"
cortex-m = { version = "^0.7" }
cortex-m-rt = "^0.7"
alloc-cortex-m = "^0.4"
panic-probe = { version = "^0.3", features = ["print-defmt"] }

microfft = "^0.5"
ssd1306 = "^0.8"
embedded-graphics = "^0.8"
embedded-storage = "^0.3"
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["derive"]}

[profile.release]
# symbols are nice and they don't increase the size on Flash
debug = true

[profile.dev.package."*"] 
opt-level = 2